--- a/PylonOpenCV/PylonOpenCV.vcxproj.filters
+++ b/PylonOpenCV/PylonOpenCV.vcxproj.filters
@@ -21,9 +21,24 @@
     <ClCompile Include="openCVGrab.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="CameraGrabber.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="PylonOpenCVcontroller.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="openCVGrab.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="CameraGrabber.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="PylonOpenCVcontroller.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="TRY_CATCH.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
