improved wrapper, but does still not function well

--- a/JVideoStream/nbproject/configs/opencv.properties
+++ b/JVideoStream/nbproject/configs/opencv.properties
@@ -1,1 +1,1 @@
-run.jvmargs=-Djava.library.path="C:\\Users\\MobMonRob\\Documents\\NetBeansProjects\\JVideoStream\\JVideoStream\\lib\\opencv\\build\\java\\x64"
+run.jvmargs=-Djava.library.path="C:\\Users\\MobMonRob\\Documents\\NetBeansProjects\\JVideoStream\\JVideoStream\\lib\\opencv\\build\\java\\x64";"C:\\Users\\MobMonRob\\Documents\\NetBeansProjects\\JVideoStream\\JVideoStream\\lib\\PylonOpenCvSwingWrapper"
