still not working

--- a/JVideoStream/nbproject/configs/opencv.properties
+++ b/JVideoStream/nbproject/configs/opencv.properties
@@ -1,1 +1,2 @@
-run.jvmargs=-Djava.library.path="C:\\Users\\MobMonRob\\Documents\\NetBeansProjects\\JVideoStream\\JVideoStream\\lib\\opencv\\build\\java\\x64";"C:\\Users\\MobMonRob\\Documents\\NetBeansProjects\\JVideoStream\\JVideoStream\\lib\\PylonOpenCvSwingWrapper"
+main.class=JVideoStream
+run.jvmargs=-Djava.library.path="C:\\Users\\MobMonRob\\Documents\\NetBeansProjects\\JVideoStream\\JVideoStream\\lib\\opencv\\build\\java\\x64";"C:\\Users\\MobMonRob\\Documents\\NetBeansProjects\\JVideoStream\\JVideoStream\\lib\\PylonOpenCvSwingWrapper";"C:\\msys64\\usr\\bin"
