--- a/PylonOpenCvSwingWrapper/PylonOpenCvSwingWrapper.vcxproj
+++ b/PylonOpenCvSwingWrapper/PylonOpenCvSwingWrapper.vcxproj
@@ -139,6 +139,9 @@
       <AdditionalIncludeDirectories>C:\Program Files\Java\jdk-12\include\win32;C:\Program Files\Java\jdk-12\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <Optimization>Disabled</Optimization>
+      <WarningLevel>Level1</WarningLevel>
+      <CallingConvention>Cdecl</CallingConvention>
+      <CompileAs>Default</CompileAs>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>C:\Program Files\Java\jdk-12\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
